update names of files

--- a/templates/config-map.yaml
+++ b/templates/config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata: 
-    name: rap-da-config
+    name: configmap-config
 data: 
     da-core-server.properties: |+
         {{ range .Files.Lines "resources/da-core-server.properties" }}
