--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -4,10 +4,7 @@ metadata:
     name: da-core-server-certificates
 type: Opaque
 data: 
-{{- $cert_path := .Values.app.daCore.competentCertificateChartPath | default "certificates/competentCertificate_def.p12" -}}
-
 {{- $root := . -}}
-{{- range $path, $bytes := .Files.Glob $cert_path }}
-    competentCertificate.p12: {{ $root.Files.Get $path | b64enc }}
+{{- range $path, $bytes := .Files.Glob "certificates/*" }}
     {{ base $path }}: {{ $root.Files.Get $path | b64enc }}
 {{- end }}
